compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__same_imports_multiple_times_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1687
expression: "\n        import one as two\n        import two\n        "
---
error: Duplicate import
  ┌─ /src/one/two.gleam:2:9
  │
2 │         import one as two
  │         ^^^^^^^^^^^^^^^^^ First imported here
3 │         import two
  │         ^^^^^^^^^^ Reimported here

two has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

